src/objects/Relationship__c.object
<CustomObject>
    <description>Junction object connecting Events and Contacts.</description>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <description>Account formula to go with the linked Contact in the Contact Group Record Type</description>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the account associated with the linked contact.</inlineHelpText>
        <label>Contact&apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>If  (ISBLANK( Contact__c) ,  Account__r.Name,Contact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archive_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to archive records.</description>
        <label>Archive Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIST Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDII - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDII - Academic/Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDII - Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFT - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small/medium Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic and Research Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Member</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Award_Amount__c</fullName>
        <label>Award Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Number__c</fullName>
        <label>Award Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_Relationship_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete the relationship record.</description>
        <label>Delete Relationship Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Record Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please ensure engagement type matches the type identifier.</errorMessage>
            <filterItems>
                <field>$Source.Identifier__c</field>
                <operation>equals</operation>
                <valueField>Engagement__c.Hidden_RT_indicator__c</valueField>
            </filterItems>
            <filterItems>
                <field>Engagement__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Type Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institute__c</fullName>
        <description>Institute Account picklist.</description>
        <label>Institute</label>
        <picklist>
            <picklistValues>
                <fullName>America Makes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTFLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFFOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMLC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Sub_Type__c</fullName>
        <description>Dependent picklist of Institute and Membership Type.</description>
        <label>Membership Sub Type</label>
        <picklist>
            <controllingField>Membership_Type__c</controllingField>
            <picklistValues>
                <fullName>Supporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <picklist>
            <controllingField>Institute__c</controllingField>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDII - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic/Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFT - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small/Medium Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic and Research Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University/Non Profits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTFLEX - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTFLEX - Academic/Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Decline__c</fullName>
        <label>Reason For Decline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_External_ID__c</fullName>
        <description>External id and unique id on this record</description>
        <externalId>true</externalId>
        <label>Relationship External ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sector_of_Account__c</fullName>
        <formula>Text(Contact__r.Account.Sector__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Association__c</fullName>
        <description>Dependent picklist of Institute and Association.</description>
        <label>Sub Association</label>
        <picklist>
            <controllingField>Association__c</controllingField>
            <picklistValues>
                <fullName>Supporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_sector_of_Account__c</fullName>
        <formula>Text( Contact__r.Account.Sub_Sector__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Engagement_Name__c</columns>
        <columns>Association__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>Account_Groups</fullName>
        <active>true</active>
        <description>To be utilized to track group membership at the company level.</description>
        <label>Account Group Members</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agreement_Partner_Contact</fullName>
        <active>true</active>
        <description>To be utilized to track participation in a NIST Agreement</description>
        <label>Agreement Partner Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Groups</fullName>
        <active>true</active>
        <description>To be utilized to track group membership at the individual level.</description>
        <label>Contact Group Members</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Interest</fullName>
        <active>true</active>
        <description>To be utilized to track individual interests</description>
        <label>Topics of Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Presenter</fullName>
        <active>true</active>
        <description>To be utilized to track presenter requests</description>
        <label>Presentation Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Contact</fullName>
        <active>true</active>
        <description>To be utilized to track event participation</description>
        <label>Event Participant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Opportunity_Partner_Contact</fullName>
        <active>true</active>
        <description>To be utilized to track participation in a NIST Funding Opportunity</description>
        <label>Funding Opportunity Partner Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institute_Account_Partner</fullName>
        <active>true</active>
        <description>To be utilized to track institute membership at the company level.</description>
        <label>Institute Account Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institute_Contact_Partner</fullName>
        <active>true</active>
        <description>To be utilized to track institute membership at the individual level.</description>
        <label>Institute Contact Partner</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Delete_Relationship_Record</fullName>
        <active>true</active>
        <description>Only a user who created the record type can delete it.</description>
        <errorConditionFormula>AND (NOT(ISBLANK(CreatedById)),   Archive_Record__c == true,$User.Id &lt;&gt; CreatedById)</errorConditionFormula>
        <errorMessage>You cannot archive the record because you did not create the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_decline</fullName>
        <active>true</active>
        <description>Reasons for decline .</description>
        <errorConditionFormula>ispickval( Association__c, &quot;declined&quot;)

&amp;&amp;

 ISBLANK( Reason_For_Decline__c )</errorConditionFormula>
        <errorDisplayField>Reason_For_Decline__c</errorDisplayField>
        <errorMessage>Please indicate why the contact declined the request to present.</errorMessage>
    </validationRules>
</CustomObject>